# proj-video-uploader

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml
src/: __init__.py
src/config/: __init__.py  env.py
src/connection/: __init__.py  bigquery.py  gcp_auth.py  gsheets.py  slack.py
src/youtube_upload/: __init__.py  upload_video.py
